{
  "version": 4,
  "terraform_version": "1.13.4",
  "serial": 187,
  "lineage": "04d44e0c-4e46-8434-92a8-c8048cc3322e",
  "resources": [
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:884429705132:vpc/vpc-094ae6d2032e4e24b",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0e751e852c3153b57",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-05f000bcfe18489bf",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-094ae6d2032e4e24b",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-05416f0b21f7c937a",
            "owner_id": "884429705132"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ba15e2c4dcffba60",
            "arn": "arn:aws:ec2:us-east-1:884429705132:instance/i-01c58ab054cbef125",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-01c58ab054cbef125",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "vockey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-03d3bfc8678c33764",
            "private_dns": "ip-172-31-25-181.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.25.181",
            "public_dns": "ec2-34-228-199-75.compute-1.amazonaws.com",
            "public_ip": "34.228.199.75",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-014f03b4475a0cd9d",
                "volume_size": 2,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "ocr-aws-nuvem-web-sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01085d72de38189ec",
            "tags": {
              "Name": "ocr-aws-nuvem-web",
              "Project": "ocr-aws-nuvem"
            },
            "tags_all": {
              "Name": "ocr-aws-nuvem-web",
              "Project": "ocr-aws-nuvem"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-015a1a19c4b2608d4"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.web_sg",
            "data.aws_ami.al2023",
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "worker",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ba15e2c4dcffba60",
            "arn": "arn:aws:ec2:us-east-1:884429705132:instance/i-0a69b141e5725f176",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a69b141e5725f176",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "key_name": "vockey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0fb2bf0ef410f5922",
            "private_dns": "ip-172-31-25-254.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.25.254",
            "public_dns": "ec2-54-90-165-109.compute-1.amazonaws.com",
            "public_ip": "54.90.165.109",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-03d7aa34feee7ff62",
                "volume_size": 2,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "ocr-aws-nuvem-worker-sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01085d72de38189ec",
            "tags": {
              "Name": "ocr-aws-nuvem-worker",
              "Project": "ocr-aws-nuvem"
            },
            "tags_all": {
              "Name": "ocr-aws-nuvem-worker",
              "Project": "ocr-aws-nuvem"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0a57a7d1e30a7ccae"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.worker_sg",
            "data.aws_ami.al2023",
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:884429705132:security-group/sg-0a05e999add346cde",
            "description": "Allow Postgres from web/worker",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a05e999add346cde",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-015a1a19c4b2608d4",
                  "sg-0a57a7d1e30a7ccae"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "ocr-aws-nuvem-rds-sg",
            "name_prefix": "",
            "owner_id": "884429705132",
            "revoke_rules_on_delete": false,
            "tags": {
              "Project": "ocr-aws-nuvem"
            },
            "tags_all": {
              "Project": "ocr-aws-nuvem"
            },
            "timeouts": null,
            "vpc_id": "vpc-094ae6d2032e4e24b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.web_sg",
            "aws_security_group.worker_sg",
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:884429705132:security-group/sg-015a1a19c4b2608d4",
            "description": "Allow HTTP/SSH",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-015a1a19c4b2608d4",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "ocr-aws-nuvem-web-sg",
            "name_prefix": "",
            "owner_id": "884429705132",
            "revoke_rules_on_delete": false,
            "tags": {
              "Project": "ocr-aws-nuvem"
            },
            "tags_all": {
              "Project": "ocr-aws-nuvem"
            },
            "timeouts": null,
            "vpc_id": "vpc-094ae6d2032e4e24b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "worker_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:884429705132:security-group/sg-0a57a7d1e30a7ccae",
            "description": "Worker outbound only + SSH",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a57a7d1e30a7ccae",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "ocr-aws-nuvem-worker-sg",
            "name_prefix": "",
            "owner_id": "884429705132",
            "revoke_rules_on_delete": false,
            "tags": {
              "Project": "ocr-aws-nuvem"
            },
            "tags_all": {
              "Project": "ocr-aws-nuvem"
            },
            "timeouts": null,
            "vpc_id": "vpc-094ae6d2032e4e24b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_vpc.default"
          ]
        }
      ]
    }
  ]
}